--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<a-entity gltf-model="assets/oneMoreTime.gltf" material="src: #someBullshitmtl" scale="0.78 0.75 0.5" position="-1.178 .5 -2.02155"></a-entity>
 		<!-- <a-entity obj-model="obj: #the_gram; mtl: #the_mtl"></a-entity> -->
 		<a-entity environment="preset: forest"></a-entity>
+		<a-entity camera look-controls position="0 1.6 0"></a-entity>
 	</a-scene>
 
 </body>
