--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<a-scene>
+	<a-scene antialias="true">
 		<a-assets>
 			<img id="background" src="rocky.jpg">
 			<img id="grass" src="grass.jpg">
