--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 		<a-entity gltf-model="assets/oneMoreTime.gltf" material="src: #someBullshitmtl" scale="0.78 0.75 0.5" position="-1 .5 -4"></a-entity>
 		<!-- <a-entity obj-model="obj: #the_gram; mtl: #the_mtl"></a-entity> -->
 		<a-entity environment="preset: forest"></a-entity>
-		<a-entity camera look-controls position="0 1.6 0"></a-entity>
+
+		<!-- Camera and Cursor -->
+		<a-entity camera look-controls position="0 1.6 0">
+			<a-entity cursor="fuse: true; fuseTimeout: 500"
+            	position="0 0 -1"
+            	geometry="primitive:  ring;  radiusInner:  0.01;  radiusOuter:  0.02"
+            	material="color: white; shader: flat">
+		  </a-entity>
+		</a-entity>
 	</a-scene>
 
 </body>
