--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 	<a-scene>
 		<!-- Assets -->
-		<a-assets>
-			<img id="background" src="rocky.jpg">
-			<img id="grass" src="grass.jpg">
+		<a-assets antialias="true">
 			<a-asset-item id="someBullshit" src="assets/oneMoreTime.gltf"></a-asset-item>
 			<a-asset-item id="someBullshitmtl" src="assets/oneMoreTime.mtl"></a-asset-item>
-			<!-- <a-asset-item id="the_gram" src="assets/theactuallasttry.obj"></a-asset-item>
-			<a-asset-item id="the-mtl" src="theactuallasttry.mtl"></a-asset-item> -->
+			<!-- <a-asset-item id="orangeFilter" src="assets/orange.png"></a-asset-item> -->
+			<a-asset-item id="orangeFilter" src="https://image.shutterstock.com/image-photo/abstract-blur-vintage-background-filter-260nw-379532809.jpg"></a-asset-item>
+			<!-- <a-asset-item id="the_gram" src="assets/theactuallasttry.obj"></a-asset-item> -->
+			<img id="orangeFilterTwo" src="assets/orange.png"></img>
 		</a-assets>
 
 		<!-- Objects -->
@@ -28,7 +28,9 @@
 		<a-entity environment="preset: forest"></a-entity>
 
 		<!-- Filters -->
-		
+		<a-entity geometry="primitive: plane" position="-0.09626 1.80813 -4.051" scale="1.2 1.2 1.2" material="side: double; src: #orangeFilterTwo ; transparent: true"></a-entity>
+		<!-- <a-entity geometry="primitive: plane" position="5 1.76 -4.051" scale="1.5 1.5 1.5" material="side: double; shader: flat; transparent: true; src: #orangeFilter"></a-entity> -->
+
 
 		<!-- Camera and Cursor -->
 		<a-entity camera look-controls position="0 1.6 0">
