--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Objects -->
 
 		<!-- The Gram -->
-		<a-entity gltf-model="assets/oneMoreTime.gltf" material="src: #someBullshitmtl" scale="0.78 0.75 0.5" position="-1 .5 -4"></a-entity>
+		<a-entity gltf-model="assets/oneMoreTime.gltf" material="src: #someBullshitmtl" scale="0.78 0.75 0.5" position="-1 .5 -1.4"></a-entity>
 
 		<!-- Environment -->
 		<a-entity environment="preset: forest"></a-entity>
@@ -32,20 +32,20 @@
 		<!-- Filters -->
 
 			<!-- Orange Filter -->
-			<a-entity id="orange" geometry="primitive: plane" position="-0.09626 1.80813 -4.051" scale="0 1.2 1.2" material="side: double; src: #orangeFilterTwo ; transparent: true; blending: additive"></a-entity>
-			<a-entity id="orangeButton" geometry="depth: 0.3; height: 0.580; width: 0.3" position="-0.10403 0.897 -3.93351"></a-entity>
+			<a-entity id="orange" geometry="primitive: plane" position="-0.09626 1.80813 -1.5" scale="0 1.2 1.2" material="side: double; src: #orangeFilterTwo ; transparent: true; blending: additive"></a-entity>
+			<a-entity id="orangeButton" geometry="depth: 0.3; height: 0.580; width: 0.3" position="-0.10403 0.897 -1.338" material="color: #69d5bd"></a-entity>
 
 			<!-- Orange to Blue Filter -->
-			<a-entity id="otb" geometry="primitive: plane" position="-0.09626 1.80813 -4.051" scale="0 1.2 1.2" material="side: double; src: #o2b ; transparent: true; blending: additive"></a-entity>
+			<a-entity id="otb" geometry="primitive: plane" position="-0.09626 1.80813 -1.5" scale="0 1.2 1.2" material="side: double; src: #o2b ; transparent: true; blending: additive"></a-entity>
 				<!-- otb Filter Button -->
-			<a-entity id="otbButton" geometry="depth: 0.3; height: 0.580; width: 0.3" position="-0.458 0.897 -3.93351"></a-entity>
+			<a-entity id="otbButton" geometry="depth: 0.3; height: 0.580; width: 0.3" position="-0.458 0.897 -1.338"></a-entity>
 
 			<!-- Purple Filter -->
-			<a-entity id="purp" geometry="primitive: plane" position="-0.09626 1.80813 -4.051" scale="0 1.2 1.2" material="side: double; src: #purple ; transparent: true; blending: additive"></a-entity>
-			<a-entity id="purpleButton" geometry="depth: 0.3; height: 0.58; width: 0.3" position="0.24403 0.897 -3.93351"></a-entity>
+			<a-entity id="purp" geometry="primitive: plane" position="-0.09626 1.80813 -1.5" scale="0 1.2 1.2" material="side: double; src: #purple ; transparent: true; blending: additive"></a-entity>
+			<a-entity id="purpleButton" geometry="depth: 0.3; height: 0.58; width: 0.3" position="0.24403 0.897 -1.338"></a-entity>
 
 			<!-- Clear Filter -->
-			<a-entity id="clear" geometry="depth: 0.3; height: 0.58; width: 0.3" position="0.81548 0.897 -3.93351"></a-entity>
+			<a-entity id="clear" geometry="depth: 0.3; height: 0.58; width: 0.3" position="0.81548 0.897 -1.338"></a-entity>
 
 		<!-- Camera and Cursor -->
 		<a-entity camera look-controls position="0 1.6 0">
